--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,13 @@ body {
 	flex-direction: : column;
 	min-height: 100%;
 }
+
+.wrapper.index-page{
+	justify-content: center;
+}
+
+.main-section{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
