--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,5 +36,19 @@ body {
 	align-items: center;
 }
 
+.search-container .search-button{
+	color: #757575;
+	background-color: #f5f5f5;
+	border: none;
+	height: 36px;
+	width: 125px;
+	border-radius: 1px;
+	font-size: 13px;
+	font-weight: bold;
+	margin-top: 20px;
+	cursor: pointer;
+	outline: none;
+}
+
 
 
