--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,4 +51,16 @@ body {
 }
 
 
-
+.main-section .search-container .search-box{
+	border: none;
+	box-shadow: 0 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+	height: 44px;
+	border-radius: 2px;
+	outline: none;
+	padding: 10px;
+	box-sizing: border-box;
+	font-size: 16px;
+	width: 100%;
+	max-width: 630px;
+	color: #000;
+}
