--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,3 +96,23 @@ body {
 .header-content .search-container form{
 	margin: 15px 0 28px 0;
 }
+
+.header-content .search-bar-container{
+	height: 44px;
+	border-radius: 2px;
+	background-color: #fff;
+	box-shadow: 0 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+	width: 70%;
+	max-width: 630px;
+	box-sizing: border-box;
+	display: flex;
+}
+
+.header-content .search-bar-container .search-box{
+	flex:;
+	border: 0;
+	background-color: transparent;
+	padding: 32px;
+	font-size: 16px;
+	color: #000;
+}
