--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ body {
 	border-radius: 2px;
 	background-color: #fff;
 	box-shadow: 0 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-	width: 70%;
+	width: 100%;
 	max-width: 630px;
 	box-sizing: border-box;
 	display: flex;
@@ -115,4 +115,18 @@ body {
 	padding: 32px;
 	font-size: 16px;
 	color: #000;
+}
+.header-content .search-bar-container .search-button{
+	background-color: #fff; 
+	height: 44px;
+	width: 44px;
+	margin-top: 0;
+	padding-right:  20px;
+	display: flex;
+	justify-content: center;
+
+}
+
+.header-content .search-bar-container .search-button img{
+	width: 22px;
 }
