--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,21 +140,25 @@ body {
 	margin: 0;
 }
 
-
 .tab-container .tab-list li{
 	display: inline-block;
 	padding: 0 16px 12px, 16px;
 	color: #777;
 	font-size: 13px;
 }
+
 .tab-container .tab-list li a{
 	text-decoration: none;
 }
 
+.tab-container .tab-list li.active{
+	border-bottom: 3px solid #1a73e8;
+}
 
-
-
-
+.tab-container .tab-list li.active a{
+	font-weight: bold;
+	color: #1a73e8;
+}
 
 
 
