--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ body {
 
 .tab-container .tab-list li{
 	display: inline-block;
-	padding: 0 16px 12px, 16px;
+	padding: 0 16px 12px 16px;
 	color: #777;
 	font-size: 13px;
 }
