--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,3 +205,9 @@ body {
 .result-container .description{
 	font-size: 12px;
 }
+
+.pagination-container{
+	display: flex;
+	justify-content: center;
+	margin-bottom: 25px;
+}
