--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,3 +219,15 @@ body {
 .page-number-container img{
 	height: 37px;
 }
+
+.page-number-container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-decoration: none;
+}
+
+.page-number{
+	color: #000;
+	font-size: 13px;
+}
