Style page number hyperlink

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,8 @@ body {
 	height: 37px;
 }
 
-.page-number-container{
+.page-number-container, 
+.page-number-container a{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
