Styles for image results

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,3 +236,35 @@ body {
 a .page-number{
 	color: #4285f4;
 }
+
+.main-result-section .image-results {
+	margin: 20px;
+}
+
+.grid-item img{
+	max-width: 200px;
+	min-width: 50px;
+}
+
+.grid-item {
+	position: relative;
+}
+
+.grid-item .details{
+	visibility: hidden;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	width: 100%;
+	overflow: hidden;
+	background-color: rgba(0, 0, 0, 0.8);
+	color: #fff;
+	font-size: 11px;
+	padding: 3px;
+	box-sizing: border-box;
+	white-space: nowrap;
+}
+
+.grid-item:hover .details {
+	visibility: visible;
+}
